# Wpi

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  contract-size-check.yml
Stellar-contracts-v1/: Cargo.toml  README.md  baseline.json  testnet_e2e_simulation.sh
Stellar-contracts-v1/mock-amm/src/: lib.rs
Stellar-contracts-v1/mock-usdc/src/: lib.rs  test.rs
Stellar-contracts-v1/scripts/: quickstart.sh  verify_dependency_provenance.sh
Stellar-contracts-v1/soroban-token-common/: Cargo.toml
Stellar-contracts-v1/soroban-token-common/src/: lib.rs  test.rs
Stellar-contracts-v1/wpi-token/src/: lib.rs  test.rs
scripts/: deploy_mainnet.sh  deploy_testnet.sh
